# auto_harness_layout

./: CLAUDE.md  README.md  pyproject.toml  run_grid2d_editor.py
docs/: grid2d_implementation_summary.md  grid2d_usage.md
docs/tasks/: 2026.2.txt
examples/: grid2d_example.py
src/ahl/grid2d/: __init__.py  __main__.py
src/ahl/grid2d/core/: __init__.py  astar.py  cell_type.py  grid.py  sdf.py
src/ahl/grid2d/io/: __init__.py  npz_handler.py
src/ahl/grid2d/ui/: __init__.py  control_panel.py  dialogs.py  grid_widget.py  main_window.py  toolbar.py
src/ahl/grid2d/utils/: __init__.py  validators.py
test/: t_main.py
test/grid2d/: __init__.py  test_astar.py  test_grid.py  test_io.py  test_sdf.py
